[gd_scene format=3]

[ext_resource type="Script" path="res://addons/diablohumastudio/database_manager/ui/tables_editor/table_field_editor/table_field_editor.gd" id="1"]
[ext_resource type="PackedScene" path="res://addons/diablohumastudio/custom_components/autocomplete/line_edit_autocomplete.tscn" id="2"]

[node name="TableFieldEditor" type="HBoxContainer"]
script = ExtResource("1")

[node name="NameLabel" type="Label" parent="."]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
text = "Name:"

[node name="FieldNameEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "field_name"

[node name="TypeLabel" type="Label" parent="."]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "Type:"

[node name="TypeAutocomplete" parent="." instance=ExtResource("2")]
unique_name_in_owner = true
layout_mode = 2

[node name="DefaultLabel" type="Label" parent="."]
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
text = "Default:"

[node name="DefaultValueContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="RemoveBtn" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "X"
